--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^4.5.95",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "lodash": "^4.17.15",
